# actix-web-middleware-opa

./: Cargo.toml  README.md
resource/: opa-middleware-components.uml
src/: lib.rs
