[package]
name = "actix-web-middleware-opa"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
description = "actix-web middleware for Open Policy Agent (OPA) verification"
documentation = "https://docs.rs/actix-web-middleware-opa"
homepage = "https://github.com/michiel/actix-web-middleware-opa"
readme = "README.md"
keywords = ["actix-web", "middleware", "opa", "openpolicyagent", "Open Policy Agent"]
categories = []
license = "MIT"

[lib]
name = "actix_web_middleware_opa"
path = "src/lib.rs"

[features]
default = ["jwt"]
jwt = ["jsonwebtoken"]

[dependencies]
log = "0.4"
futures = "0.1"
actix = "0.7"
actix-web = { version = "0.7",  default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = { version="1.7"}
bytes = "0.4"
http = "0.1"
base64 = "0.10"
jsonwebtoken = { version = "5.0", optional = true }
